# PLRepl

./: PLRepl.cabal  PLRepl.hs  README.md  example.html  stack.yaml
CLI/: Main.hs  PLReplCLI.cabal
JS/: Main.hs  PLReplJS.cabal  PLReplJs.cabal  build-and-open  default.nix
JS/PLReplJS/: LocalStorage.hs
Lib/: PLRepl.cabal
Lib/PLRepl/: Repl.hs  Widgets.hs
Lib/PLRepl/Repl/: Lispy.hs
Lib/PLRepl/Widgets/: Event.hs  Name.hs  State.hs  TypeCtx.hs  Usage.hs
Lib/PLRepl/Widgets/TypeCtx/: Event.hs  State.hs
PLRepl/: Editor.hs  Event.hs  Name.hs  Output.hs  Repl.hs  State.hs  TypeCtx.hs
PLRepl/Editor/: Event.hs  State.hs
PLRepl/Output/: Event.hs  State.hs
PLRepl/Repl/: Lispy.hs
PLRepl/TypeCtx/: Event.hs  State.hs
PLRepl/Widgets/: Editor.hs  Event.hs  Name.hs  Output.hs  State.hs  TypeCtx.hs
PLRepl/Widgets/Editor/: Event.hs  State.hs
PLRepl/Widgets/Output/: Event.hs  State.hs
PLRepl/Widgets/TypeCtx/: Event.hs  State.hs
PLRepl/Widgets/Usage/: Event.hs  State.hs
Terminal/: Main.hs  PLReplTUI.cabal  PLReplTUI.hs
script/: build-all  build-js  build-terminal
