name:                PLRepl
version:             0.1.0.0
synopsis:            A Repl for PL
description:         A REPL for PL built with Brick and Haskeline.
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
build-type:          Simple
cabal-version:       >=1.10

executable pl
  main-is:             PLRepl.hs

  build-depends:       base >= 4.12

                     , PL         >= 0.1
                     , PLEditor   >= 0.1
                     , PLGrammar  >= 0.4
                     , PLLabel    >= 0.1
                     , PLLispy    >= 0.2
                     , PLParser   >= 0.1
                     , PLPrinter  >= 0.3
                     , Reversible >= 0.1

                     , brick
                     , containers
                     , directory
                     , megaparsec
                     , mtl
                     , text
                     , transformers
                     , vty

  other-modules:       PLRepl.Widgets.Event
                     , PLRepl.Widgets.Name
                     , PLRepl.Widgets.State
                     , PLRepl.Widgets.Editor
                     , PLRepl.Widgets.Editor.Event
                     , PLRepl.Widgets.Editor.State
                     , PLRepl.Widgets.Output
                     , PLRepl.Widgets.Output.Event
                     , PLRepl.Widgets.Output.State
                     , PLRepl.Widgets.TypeCtx
                     , PLRepl.Widgets.TypeCtx.Event
                     , PLRepl.Widgets.TypeCtx.State
                     , PLRepl.Repl
                     , PLRepl.Repl.Lispy

  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
