name:                PLReplCLI
version:             0.1.0.0
synopsis:            A traditional request-response CLI for PL
description:         A traditional request-response CLI for PL. See PLReplTUI
                     for a terminal user interface or PLReplJS for a web
                     interface.
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
build-type:          Simple
cabal-version:       >=1.10

executable pl
  main-is:             Main.hs

  build-depends:       base >= 4.12

                     , PLRepl
                     , PLReplTUI
                     , PL         >= 0.2
                     , PLGrammar  >= 0.4
                     , PLLispy    >= 0.3
                     , PLParser   >= 0.1
                     , PLPrinter  >= 0.3
                     , PLHash

                     , PLStore
                     , PLStore-Nested
                     , PLStore-Memory
                     , PLStore-File
                     , PLStore-Hash

                     , Reversible >= 0.1

                     , containers
                     , directory
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , ansi-wl-pprint
                     , random
                     , text
                     , transformers
                     , unix
                     , vty

  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
