name:                PLReplJS
version:             0.1.0.0
synopsis:            JS based PL REPL built using ghcjs and miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:       PLReplJS.LocalStorage
  ghcjs-options:
    -dedupe
  build-depends:       base
                     , miso
                     , text
                     , random
                     , containers
                     , ghcjs-base
                     , ghcjs-prim
                     , filepath-bytestring

                     , PL
                     , PLRepl
                     , PLEditor
                     , PLLispy
                     , PLParser
                     , PLPrinter
                     , PLGrammar
                     , PLHash

                     , PLStore
                     , PLStore-Nested
                     , PLStore-Memory
                     , PLStore-File
                     , PLStore-Hash

                     , Reversible

  default-language:    Haskell2010
