name:                PLReplJs
version:             0.1.0.0
synopsis:            JS based PL REPL built using ghcjs and miso 
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:       base
                     , miso
                     , text
                     , random
                     , containers

                     , PL
                     , PLRepl
                     , PLEditor
                     , PLLispy

  default-language:    Haskell2010
