name:                PLReplTUI
version:             0.1.0.0
synopsis:            A TUI Repl for PL
description:         A TUI REPL for PL built with Brick and Haskeline.
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
build-type:          Simple
cabal-version:       >=1.10

-- Use our input/ output widgets to drive a Terminal User Interface REPL with
-- use of Brick
executable pl-tui
  main-is:             Main.hs

  other-modules:       PLReplTUI

  build-depends:       base >= 4.12

                     , PLRepl
                     , PL         >= 0.2
                     , PLEditor   >= 0.1
                     , PLGrammar  >= 0.4
                     , PLLabel    >= 0.1
                     , PLLispy    >= 0.3
                     , PLParser   >= 0.1
                     , PLPrinter  >= 0.3
                     , PLHash

                     , PLStore
                     , PLStore-Nested
                     , PLStore-Memory
                     , PLStore-File
                     , PLStore-Hash

                     , Reversible >= 0.1

                     , brick
                     , containers
                     , directory
                     , megaparsec
                     , mtl
                     , text
                     , transformers
                     , random
                     , vty

  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  exposed-modules:   PLReplTUI

  build-depends:       base >= 4.12

                     , PLRepl
                     , PL         >= 0.2
                     , PLEditor   >= 0.1
                     , PLGrammar  >= 0.4
                     , PLLabel    >= 0.1
                     , PLLispy    >= 0.3
                     , PLParser   >= 0.1
                     , PLPrinter  >= 0.3
                     , PLHash

                     , PLStore
                     , PLStore-Nested
                     , PLStore-Memory
                     , PLStore-File
                     , PLStore-Hash

                     , Reversible >= 0.1

                     , brick
                     , containers
                     , directory
                     , megaparsec
                     , mtl
                     , text
                     , transformers
                     , random
                     , vty

  default-language:    Haskell2010

